实现了分页查询图表接口
