# docs/swagger.json
@@ -9,6 +9,49 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/chart/findMyChart": {
+            "get": {
+                "description": "用户获取自己的图表数据接口",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chart"
+                ],
+                "summary": "用户获取自己的图表数据接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "chartName",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "currentPage",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "pageSize",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.FindMyChartResp"
+                        }
+                    }
+                }
+            }
+        },
         "/chart/gen": {
             "post": {
                 "description": "AI生成图表数据接口",
@@ -158,6 +201,29 @@
         }
     },
     "definitions": {
+        "api.ChartInfoV0": {
+            "type": "object",
+            "properties": {
+                "chartCode": {
+                    "type": "string"
+                },
+                "chartGoal": {
+                    "type": "string"
+                },
+                "chartID": {
+                    "type": "integer"
+                },
+                "chartName": {
+                    "type": "string"
+                },
+                "chartResult": {
+                    "type": "string"
+                },
+                "chartType": {
+                    "type": "string"
+                }
+            }
+        },
         "api.CurrentUserDetailResp": {
             "type": "object",
             "properties": {
@@ -171,6 +237,26 @@
                 },
                 "userInfoV0": {
                     "$ref": "#/definitions/api.UserInfoV0"
+                }
+            }
+        },
+        "api.FindMyChartResp": {
+            "type": "object",
+            "properties": {
+                "charts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.ChartInfoV0"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "statusCode": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
