# internal/route.go
@@ -17,8 +17,13 @@ func Route() *gin.Engine {
 		userGroup.POST("/register", handle.UserRegister) //用户注册接口
 		userGroup.GET("/CurrentUserDetail", middleware.AuthUserToken(), handle.CurrentUserDetail)
 	}
+	chartGroup := routes.Group("/chart", middleware.AuthUserToken())
+	{
+		chartGroup.POST("/gen", handle.GenChart)
+		chartGroup.GET("/findMyChart", handle.FindMyChart)
+	}
 
-	routes.POST("/chart/gen", middleware.AuthUserToken(), handle.GenChart)
 	routes.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
 	return routes
 }
